fix(filename): add ellipsis for text overflow property

--- a/packages/form/src/assets/css/fileInput.css
+++ b/packages/form/src/assets/css/fileInput.css
@@ -27,6 +27,11 @@
   width: 90%;
 }
 
+.file-input .selected li .info .details > span {
+  overflow: clip;
+  text-overflow: ellipsis;
+}
+
 .file-input .selected li > button,
 .file-list-overlay .selected li > button {
   margin-left: auto;
